# RocketX

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml  desktop.yml  npm-publish.yml  publish-release.yml  tag-version.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: ntlm_probe.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/codex-skills/: README.md  azure-devops-server-host-adapter.ps1
apps/desktop/src-tauri/resources/codex-skills/azure-devops-server/: SKILL.md
apps/desktop/src-tauri/resources/codex-skills/azure-devops-server/agents/: openai.yaml
apps/desktop/src-tauri/resources/codex-skills/azure-devops-server/references/: api-version-matrix.md  release-support.md  repo-support.md  search-support.md  test-results-support.md  work-item-support.md  work-support.md  workflow-recipes.md
apps/desktop/src-tauri/resources/codex-skills/azure-devops-server/scripts/: AzureDevOpsServer.psm1  Invoke-AzureDevOpsServerApi.ps1  Test-AzureDevOpsServerConnection.ps1
apps/desktop/src-tauri/resources/plugins/: README.txt
apps/desktop/src-tauri/src/: agent_bot.rs  butler_db.rs  diagnostics.rs  ipmsg.rs  lan.rs  main.rs  mcp.rs  native_service.rs  ocr.rs  proc.rs  winauth.rs
apps/desktop/src-tauri/tests/fixtures/: ocr-chat-20px.png.b64
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
docker/: docker-compose.yml  nginx.conf  web.Dockerfile  web.Dockerfile.dockerignore
docs/: ai-design.md  ai-proactivity-design.md  app-development.md  architecture.md  blueprint.md  compatibility.md  implementation-notes-ai-zero-config.md  implementation-notes-npm-scope-v0.25.13.md  implementation-notes-team-config-hardening.md  implementation-notes-workitem-agent-environments.md  implementation-notes.md  intranet-link-plugin-plan.md  ipmsg-interop-findings.md  m10-implementation-plan.md  m10-spike-b.md  m10-validation.md  m11-implementation-plan.md  m11-validation.md  m12-implementation-plan.md  m8-implementation-plan.md  m9-implementation-plan.md  m9-validation.md  proposal-config-provisioning.md  proposal-project-management-apps.md  quality-audit.md
docs/examples/: rcx.workspace.sample.json  wi-templates.sample.json
docs/prototypes/: butler-desk.html
docs/release/: README.md
examples/hello-app/: index.html  rcx.app.json
examples/kanban-app/: index.html  rcx.app.json
examples/oncall-app/: index.html  rcx.app.json
examples/poll-app/: index.html  rcx.app.json
plugins/intranet-link/: README.md  index.html  rcx.app.json
plugins/intranet-link/native/: Cargo.toml
plugins/intranet-link/native/src/: main.rs  runtime.rs
scripts/: clean-test-rooms.ts  codex-protocol.mjs  gen-emoji.ts  ipmsg_probe.py  measure-desktop-memory.ps1  package-plugins.mjs  prepare-plugin-sidecars.mjs  release-notes.mjs  seed-files.ts  seed-pdf.ts  seed-wi.ts  smoke-agent-runner.mjs  smoke-codex-app-server.mjs  smoke-upload.ts  smoke.ts  spike-butler-azure-skill-adapter-path.ts  spike-butler-dynamic-tools.mjs  spike-butler-native-skills.ts  spike-rc-offline-contract.ts  test-ado-live.ts  test-ado-probe.ts  test-agent-runner.mjs  test-app-ecosystem.mjs  test-classify.ts  test-pure.ts  verify-issue19.ts  verify-release-assets.mjs  verify-release.mjs
scripts/fixtures/: assistant-command.schema.json
scripts/lib/: codex-app-server-spike.ts
scripts/regressions/: ado-open-issues.test.ts  ado-skill-cli.test.ts  agent-card.test.ts  agent-context.test.ts  agent-environments.test.ts  agent-history-bridge.test.ts  agent-hosting-settings.test.ts  agent-loop.test.ts  agent-reply-notification.test.ts  agent-session.test.ts  ai-assistant-scroll.test.ts  ai-provider.test.ts  ai-steward-features.test.ts  ai-tool-calls.test.ts  app-cli.test.ts  (+104 more)
(+287 files in other folders)
