[package]
name = "rocketx"
version = "0.25.1"
description = "RocketX 桌面客户端 - 飞书体验的 Rocket.Chat 客户端"
authors = ["lusipad"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon：关闭到系统托盘 + 托盘菜单（issue #3）
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
# 文件下载：webview 不认 <a download> + blob，必须走原生保存对话框 + 文件写入
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# 系统通知：WebView2 里 Web Notification 常年被判 denied，改走系统通知插件（issue #4）
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# AI Provider 密钥只进系统凭据库；失败时不回退到文件或前端存储。
keyring = "4.1"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
blake3 = "1.8"
ed25519-dalek = "3.0"
encoding_rs = "0.8"
getrandom = "0.4"
mdns-sd = "0.20"
socket2 = "0.6"
zeroize = "1"

# Windows 集成认证（NTLM/Negotiate）：域内的 Azure DevOps Server 默认就是这个，
# 不该逼用户去建 PAT。webview 和 reqwest 都做不了「用当前登录用户的凭据」，
# 只有 WinHTTP 能——它会自己完成 401 挑战-应答握手。
[target.'cfg(windows)'.dependencies]
notify-rust = "4.18"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Networking_WinHttp",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
