[package]
name = "rcx-plugin-intranet-link"
version = "1.3.0"
edition = "2021"
publish = false

[dependencies]
blake3 = "1.8"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
